--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'com.google.gms.google-services'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.objectbox'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -39,9 +41,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.26.0"
-    implementation 'com.google.firebase:firebase-firestore:17.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1"
     implementation 'com.beust:klaxon:3.0.1'
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation "io.objectbox:objectbox-kotlin:$objectboxVersion"
 }
