--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 kotlin{
@@ -44,4 +49,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1"
     implementation 'com.beust:klaxon:3.0.1'
     implementation "io.objectbox:objectbox-kotlin:$objectboxVersion"
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
