--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'io.objectbox'
 
+apply plugin: 'kotlinx-serialization'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -46,8 +48,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
     implementation 'com.beust:klaxon:3.0.1'
     implementation "io.objectbox:objectbox-kotlin:$objectboxVersion"
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
 }
